--- a/assets/css/2-base/placeholders.sass
+++ b/assets/css/2-base/placeholders.sass
@@ -3,3 +3,10 @@
     size: 14px
     weight: 700
   text-transform: uppercase
+
+
+%big-bold
+  font:
+    size: 26px
+    weight: 800
+  text-transform: uppercase
