--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -7,7 +7,8 @@ footer
     +clearfix
 
   .overlay
-    background-color: rgba(44, 62, 80, 0.5)
+    //background-color: rgba(44, 62, 80, 0.5)
+    background-color: rgba(300, 162, 80, 0.2)
     background-image: url("../img/pattern.png")
     background-repeat: repeat
     padding: 40px
@@ -31,4 +32,4 @@ footer
         margin-right: 30px
         
         &:hover
-          color: #A7A7A7
+          color: $hover-color
