--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -5,7 +5,7 @@ header
     background-size: cover
 
   .overlay 
-    background-color: rgba(44, 62, 80, 0.5)
+    background-color: rgba(300, 162, 80, 0.2)
     background-image: url("../img/pattern.png")
     background-repeat: repeat
     height: 450px
@@ -24,7 +24,7 @@ header
         @extend %small-bold
         
         &:hover
-          color: #A7A7A7
+          color: $hover-color
       
 
     .kicker1
