--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -5,3 +5,6 @@ $headlineColor: #333
 $textColor: #666
 $linkColor: #21a1e1
 $selectionColor: rgb(255,255,158)
+
+$accent: #FF8082
+$hover-color: #56B0B8
