--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -8,7 +8,7 @@ header
     background-color: rgba(300, 162, 80, 0.2)
     background-image: url("../img/pattern.png")
     background-repeat: repeat
-    height: 620px
+    height: 100%
 
 
   .content
