--- a/_includes/about.html
+++ b/_includes/about.html
@@ -21,6 +21,73 @@
 	</div>
 
 
-	<div class="skills"></div>
+	<div class="skill-lockup">
+
+		<div class="skill-unit">
+			<div class="skill-label">Communication</div>
+			<div class="skill-icons skill-8">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>						
+		</div>
+
+		<div class="skill-unit">
+			<div class="skill-label">HTML/CSS</div>
+			<div class="skill-icons skill-7">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>						
+		</div>
+
+		<div class="skill-unit">
+			<div class="skill-label">Organization</div>
+			<div class="skill-icons skill-7">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>						
+		</div>
+
+		<div class="skill-unit">
+			<div class="skill-label">Python/Django</div>
+			<div class="skill-icons skill-7">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>						
+		</div>
+
+
+		<div class="skill-unit">
+			<div class="skill-label">Planning</div>
+			<div class="skill-icons skill-8">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>						
+		</div>
+
+
+		
+
+
+		<div class="skill-unit">
+			<div class="skill-label">JavaScript/jQuery</div>
+			<div class="skill-icons skill-5">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>						
+		</div>
+
+
+		<div class="skill-unit">
+			<div class="skill-label">Learning</div>
+			<div class="skill-icons skill-9">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>						
+		</div>
+
+
+		<div class="skill-unit">
+			<div class="skill-label">Ruby/PHP</div>
+			<div class="skill-icons skill-5">
+				<span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+			</div>					
+		</div>
+
+
+
+	</div>
 
 </section>
