--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -1,53 +1,102 @@
-
-h3
-	@extend %big-bold
-	color: #FFB666
-	text-align: center
-	padding: 40px 0 20px
-
-.face-lockup
-	max-width: 780px
-	+display(flex)
-	margin: 0 auto
-	+align-items(center)
-	+justify-content(space-around)
-
-	.face-img
-		+size(200px)
-		background: url(/assets/img/face.JPG)
-		order: 3
-
-	[class^="icon"]
-		+size(100px)
-		&.icon1
-			order: 1
-		&.icon2
-			order: 2
-		&.icon3
-			order: 4
-		&.icon4
-			order: 5
+section
 
 
-@media screen and (max-width: 650px)
-	.face-lockup
-		display: block
+
+	h3
+		@extend %big-bold
+		color: #FFB666
 		text-align: center
+		padding: 40px 0 20px
 
-		div
-			display: inline-block
+	.face-lockup
+		max-width: 780px
+		+display(flex)
+		margin: 0 auto
+		+align-items(center)
+		+justify-content(space-around)
 
 		.face-img
-			display: block
-			background-position: center center
-			background-repeat: no-repeat
-			width: auto
-			margin-bottom: 30px
+			+size(200px)
+			background: url(/assets/img/face.JPG)
+			order: 3
 
-.blurb
-	max-width: 620px
-	padding: 0 15px
-	margin: 50px auto
-	font-size: 24px
-	text-align: center
-	font-weight: 300s
+		[class^="icon"]
+			+size(100px)
+			&.icon1
+				order: 1
+			&.icon2
+				order: 2
+			&.icon3
+				order: 4
+			&.icon4
+				order: 5
+
+
+	@media screen and (max-width: 650px)
+		.face-lockup
+			display: block
+			text-align: center
+
+			div
+				display: inline-block
+
+			.face-img
+				display: block
+				background-position: center center
+				background-repeat: no-repeat
+				width: auto
+				margin-bottom: 30px
+			
+			[class^="icon"]
+				margin: 10px
+	.blurb
+		max-width: 620px
+		padding: 0 20px
+		margin: 50px auto
+		font-size: 24px
+		text-align: center
+		font-weight: 400
+
+
+	.skill-lockup
+		max-width: 540px
+		margin: 100px auto
+		color: #999
+		+clearfix
+
+		.skill-unit
+			width: 270px
+			float: left
+
+		.skill-icons
+			font-size: 0
+			margin: 3px 0 30px
+
+			span
+				display: inline-block
+				+size(14px)
+				background-color: $accent
+				margin-right: 8px
+				border-radius: 50%
+
+				&:after
+					content: ''
+					display: block
+					+size(10px)
+					background: #fff
+					border-radius: 50%
+					margin: 2px
+
+			@for $i from 1 through 10
+				&.skill-#{$i} span:nth-child(n+#{$i+1})
+					background: #999
+
+	@media screen and (max-width: 541px)
+		.skill-lockup
+			width: 220px
+	    
+		.skill-unit
+			width: 220px 
+  
+  
+  
