--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,16 @@
-<header>
+<header id="header">
+
   <div class="background">
   <div class="overlay">
 	<div class="content">
 	  <nav>
-	    <a href="">About Me</a>
-	    <a href="">Skills</a>
-	    <a href="">Work</a>
-	    <a href="">Contact</a>
+	    {% for item in site.data.settings.menu %}
+      		<a href="{{ item.url }}">{{ item.name }}</a>
+    	{% endfor %}
 	  </nav>
 
 	  <p class="kicker1">Hello, my name is Aliaksandr Sushkevich and I am</p>
-	  <h1>{{ site.description }}</h1>
+	  <h1>Full Sctack Web Developer</h1>
 	  <!--<p class="kicker2">creating modern and responsive Web Application</p>-->
 	</div>
   </div>
