--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -6,5 +6,5 @@ $textColor: #666
 $linkColor: #21a1e1
 $selectionColor: rgb(255,255,158)
 
-$accent: #FF9970
-$hover-color: #FFB666
+$orange: #FF9970
+$orange-light: #FFB666
