--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,6 +1,6 @@
 header
   .background
-    height: 620px
+    height: 100vh
     background: url(../img/background.jpg) center center
     background-size: cover
 
@@ -24,7 +24,7 @@ header
         @extend %small-bold
         
         &:hover
-          color: $hover-color
+          color: $orange-light
       
 
     .kicker1
@@ -35,7 +35,7 @@ header
       letter-spacing: 0.05em
       color: white
       line-height: 1
-      padding-top: 250px
+      padding-top: 45vh
 
     h1
       text-align: center
