work section, thiner fonts

--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -3,8 +3,12 @@
 $documentBackgroundColor: #fff
 $headlineColor: #333
 $textColor: #666
-$linkColor: #21a1e1
+$linkColor: #E4E7EC
 $selectionColor: rgb(255,255,158)
+$accent: "#c99065"
+$bgcolor: #E4E7EC
 
-$orange: #FF9970
+
+$orange: #FFB975
 $orange-light: #FFB666
+$orange-dark: #B5835E
