--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -56,7 +56,11 @@ section
 		margin: 50px auto
 		font-size: 22px
 		text-align: center
-		font-weight: 350
+		font-weight: 300
+
+		strong
+			font-weight: 500
+
 
 	.skill-lockup
 		max-width: 540px
