--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -14,6 +14,12 @@
 		position: relative
 		padding-top: 16%
 		overflow: hidden
+		cursor: pointer
+		background: 
+			position: center center
+			repeat: no-repeat
+			size: cover
+		+perspective(300)
 
 		@media screen and (max-width: 760px)
 			width: 50%
@@ -26,15 +32,19 @@
 			size: cover
 
 		.thumb-overlay
-			+position(absolute, 100% 0px null 0px)
+			+position(absolute, -50% 0px null 0px)
 			height: 100%
 			background: fade-out($orange-dark, 0.1)
 			text-align: center
-			+transition
+			+transition(200ms)
 			+display(flex)
 			+align-items(center)
 			+justify-content(space-around)
-
+			+transform(rotateX(90deg))
+			+transform-origin(center bottom)
+			opacity: 0
+			//+transform (matrix3d(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1))
+			//+transition(opacity, 200ms, ease-out, 500ms)
 		strong
 			display: block
 			padding: 0px 20px
@@ -45,4 +55,7 @@
 			line-height: 1.2
 
 		&:hover .thumb-overlay
-			+position(absolute, 0% 0px null 0px)
+			top: 0%
+			+transform(rotateX(0deg))
+			opacity: 1
+			//@extend %animation
