--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -82,7 +82,7 @@ section
 			span
 				display: inline-block
 				+size(14px)
-				background-color: $orange
+				background-color: $crimson
 				margin-right: 8px
 				border-radius: 50%
 
@@ -105,5 +105,4 @@ section
 		.skill-unit
 			width: 220px 
   
-  
-  
+
