--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,19 +1,33 @@
-<section class="alt-section">
-
-	<h3 id="work">Work</h3>
-	
-	<div class="thumb-container">
-		
-		{% for project in site.data.settings.projects %}
-
-		<a href="" class="thumb-unit" style="background-image: url(/assets/img/work/{{project.folder}}/thumb.jpg)">			
-			<div class="thumb-overlay">
-				<strong>{{ project.name }}</strong>
-			</div>
-		</a>	
-
-		{% endfor %}
-
-	</div>
-
+<section class="alt-section section-work">
+  
+  <h3 id="work">Work</h3>
+  
+  <div class="work-belt">
+    
+    <div class="thumb-wrap">
+      <div class="thumb-container">
+      {% for project in site.data.settings.projects %}
+      <div class="thumb-unit" style="background-image: url(/assets/img/work/{{project.folder}}/thumb.jpg);"> 
+        <div class="thumb-overlay">
+          <strong>{{ project.name }}</strong>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+    </div>
+    
+    <div class="work-wrap">
+      <div class="work-container">
+      <div class="work-return">{% include icons/icon-back.html %}</div>
+      <h4>Typo International Design Talks</h4>
+      <div style="max-width: 600px; height: 500px; background: #ccc;"></div>
+      <p>Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a.</p>
+      <div style="max-width: 600px; height: 500px; background: #ccc;"></div>
+      <p>Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a.</p>
+      <div style="max-width: 600px; height: 500px; background: #ccc;"></div>
+      <p>Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a.</p>
+    </div>
+    </div>
+    
+  </div>
 </section>
