--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -9,6 +9,7 @@ $accent: "#c99065"
 $bgcolor: #E4E7EC
 
 
-$orange: #FFB975
+$orange: #F38144
 $orange-light: #FDAE58
 $orange-dark: #B5835E
+$crimson: #FF6366
