--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -1,10 +1,24 @@
 .alt-section
 	background: $bgcolor
+	overflow-x: hidden
+
+.work-belt
+	//height: 100vh
+	width: 200%
+	position: relative
+	left: 0%
+	+transition(400ms)
+
+.thumb-wrap, .work-wrap
+	width: 50%
+	float: left
+	
 
 .thumb-container
 	max-width: 960px
 	margin: 0px auto
-	padding-bottom: 100px
+	padding-bottom: 180px
+	//padding-top: 10vh
 	+clearfix
 
 	.thumb-unit
@@ -59,3 +73,48 @@
 			+transform(rotateX(0deg))
 			opacity: 1
 			//@extend %animation
+
+
+
+.work-container
+	max-width: 600px
+	margin: 0px auto
+	padding: 0 15px
+	+box-sizing(border-box)
+
+	position: relative
+	display: none
+
+	h4
+		color: $orange-dark
+		font-weight: 300
+		text-transform: uppercase
+		font-size: 30px
+		line-height: 1.2
+		margin: 0 0 20px
+	img
+		max-width: 100% 
+		margin-bottom: 20px
+
+	.work-return
+		+size(40px)
+		cursor: pointer
+		opacity: 0.5
+		+position(absolute, -3px null null -60px)
+
+		
+
+		path
+			fill: rgba(0,0,0,0.4)
+
+		&:hover
+			opacity: 1
+
+@media (max-width: 740px)
+	.work-container
+
+		.work-return
+			left: 0px
+
+		h4
+			margin-left: 60px
