--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -96,7 +96,7 @@ section
 
 			@for $i from 1 through 10
 				&.skill-#{$i} span:nth-child(n+#{$i+1})
-					background: #999
+					background: $bgcolor
 
 	@media screen and (max-width: 541px)
 		.skill-lockup
