--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,31 +1,51 @@
 <section class="section-clients">
 	
 	<h3 id="clients">Clients</h3>
+
+ <div class="clients-mobile-nav">
+  {% for client in site.data.settings.clients %}
+    {% if forloop.first %}
+      <span class="active-client"></span>
+    {% else %}
+      <span></span>
+    {% endif %}
+  {% endfor %}
+</div>
 	
-	<div class="client-controls">
-		<div class="client-control-next">{% include/icons/icon-next.html %}</div>
-		<div class="client-control-prev">{% include/icons/icon-prev.html %}</div>
-	</div>
+<div class="clients-belt">
+    {% for client in site.data.settings.clients %}
+      <div class="client-unit {% if forloop.first %}active-client{% endif %}">
 
-	<div class="clients-belt">
-		<div class="client-unit">
-			<div class="client-face">
-				<img src="assets/img/clients/face-aaroni.jpg" alt="">
-				<strong class="client-name">Scott Summers</strong>
-				<em class="client-title">Director of Design, Oracle</em>
-			</div>
-			<div class="client-content">
-				<div class="client-quote-mark">{% include/icons/icon-quote-mark.html %}</div>
-				<p><strong>Like many people, I want to enjoy my work.</strong> I want to feel like I'm having a positive impact on the lives of the customers and make their lives easier, better and happier. I'm interested in roles where I'm allowed — nay, encouraged — to keep my hands and eyes on a product every step of the way. Where I can manage and build a project without having to spend all day in meetings and provide the best possible experience for the customers.</p>
-			</div>
-		</div>
-	</div>
+        <figure class="client-face">
+          <img src="assets/img/clients/{{ client.avatar }}" alt="client-face">
+          <figcaption>
+            <strong class="client-name">{{ client.name }}</strong>
+            <em class="client-title">{{ client.title }}</em>
+          </figcaption>
+        </figure>
 
-	<div class="clients-logos">
-		<div class="client-logo active-client"></div>
-		<div class="client-logo"></div>
-		<div class="client-logo"></div>
-		<div class="client-logo"></div>
-	</div>
+        <div class="client-content">
+          <div class="client-quote-mark">{% include icons/icon-quote-mark.html %}</div>
+          {{ client.quote }}
+        </div>
+      </div>
+    {% endfor %}
+  
+  </div>
+
+  <div class="client-controls">
+    <div class="client-control-next">{% include icons/icon-next.html %}</div>
+    <div class="client-control-prev">{% include icons/icon-prev.html %}</div>
+  </div>
+
+  <div class="clients-logos">
+    {% for client in site.data.settings.clients %}
+      {% if forloop.first %}
+        <img class="client-logo active-client" src="assets/img/clients/{{ client.logo }}" align="{{ client.logo }}">
+      {% else %}
+        <img class="client-logo" src="assets/img/clients/{{ client.logo }}" align="{{ client.logo }}">
+      {% endif %}
+    {% endfor %}
+  </div>
 
 </section>
