--- a/assets/css/3-sections/_clients.sass
+++ b/assets/css/3-sections/_clients.sass
@@ -56,8 +56,8 @@
   +align-items(flex-end)
   +justify-content(space-around)
   
-  
   .client-logo
+    z-index: 2
     cursor: pointer
     margin: 0 20px 20px
     padding-bottom: 20px
@@ -67,6 +67,7 @@
     &.active-client
       opacity: 1
       border-bottom: 2px solid $orange-dark
+      
       
     
 
@@ -93,13 +94,18 @@
     
     path
       fill: $orange-dark
-    
+
+
+    &:hover
+      +transform(scale(1.25))
+
+
   .client-control-next
     +position(absolute, 50% 10px null null)
   
   .client-control-prev
     +position(absolute, 50% null null 10px)
-
+  
 // clients-mobile-nav
 .clients-mobile-nav
   text-align: center
@@ -116,7 +122,7 @@
     cursor: pointer
     
     &.active-client
-      border-color: $orange-light
+      border-color: $orange-dark
     
     
     
@@ -136,6 +142,8 @@
     
       .client-face
         margin-bottom: 30px
+        margin-right: 0
+        margin-left: 0
       
       .client-content
         padding: 0px 30px
