--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -5,20 +5,24 @@ header
     background-size: cover
 
   .overlay 
-    background-color: rgba(300, 162, 80, 0.12)
+    background-color: rgba(53, 49, 45, 0.35)
     background-image: url("../img/pattern.png")
     background-repeat: repeat
     height: 100%
 
 
   .content
+    position: absolute
+    width: 100%
+    top: 40%
+    
     nav
-      float: right
-      margin: 30px 30px 0 0
+      text-align: center
       
       a
         display: inline-block
         margin-left: 20px
+        margin-right: 20px
         
         color: #FFFFFF
         @extend %small-bold
@@ -35,7 +39,7 @@ header
       letter-spacing: 0.05em
       color: white
       line-height: 1
-      padding-top: 45vh
+
 
     h1
       text-align: center
@@ -56,3 +60,9 @@ header
       letter-spacing: 0.05em
       color: white
       line-height: 1
+
+@media (max-width: 420px)
+  
+  header .content nav a
+    margin-left: 0px
+    margin-right: 15px
