add placeholders and social icons

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -38,7 +38,7 @@
     <div class="client-control-prev">{% include icons/icon-prev.html %}</div>
   </div>
 
-  <div class="clients-logos">
+<!--   <div class="clients-logos">
     {% for client in site.data.settings.clients %}
       {% if forloop.first %}
         <img class="client-logo active-client" src="assets/img/clients/{{ client.logo }}" align="{{ client.logo }}">
@@ -47,5 +47,5 @@
       {% endif %}
     {% endfor %}
   </div>
-
+ -->
 </section>
