--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,12 +2,12 @@
 	<h3 id="contact">Contact</h3>
 
 	<div class="social-links">
-		<a href="" class="icon">A</a>
-		<a href="" class="icon">B</a>
-		<a href="" class="icon">C</a>
+		<a href="https://vk.com/alscream" class="icon">{% include icons/social-vk.html %}</a>
+		<a href="https://github.com/aliaksandr-s" class="icon">{% include icons/social-github.html %}</a>
+		<a href="" class="icon">{% include icons/social-linkedin.html %}</a>
 	</div>
 	
-	<hr class="bar">
+<!-- 	<hr class="bar"> -->
 
 	<a href="mailto:{{site.data.settings.email}}" class="biglink">{{site.data.settings.email}}</a>
 
