--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -10,11 +10,11 @@ section
 		padding: 40px 0 20px
 
 	.face-lockup
-		max-width: 780px
+		max-width: 880px
 		+display(flex)
 		margin: 0 auto
 		+align-items(center)
-		+justify-content(space-between)
+		+justify-content(space-around)
 
 		.face-img
 			+size(200px)
