--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,10 +4,10 @@
 
 		<div class="face-img"></div>
 
-		<div class="icon1">{% include icons/developer.html %}</div>
-		<div class="icon2">{% include icons/globe-gear.html %}</div>
+		<div class="icon1">{% include icons/responsive.html %}</div>
+		<div class="icon2">{% include icons/javascript-coding.html %}</div>
 		<div class="icon3">{% include icons/html-coding.html %}</div>
-		<div class="icon4">{% include icons/web-content.html %}</div>
+		<div class="icon4">{% include icons/api-code.html %}</div>
 
 	</div>
 
