--- a/assets/css/3-sections/_clients.sass
+++ b/assets/css/3-sections/_clients.sass
@@ -18,6 +18,7 @@
       @extend %bounceOut
 
     .client-face
+      margin-top: 0
       min-width: 300px
       text-align: center
       
@@ -44,6 +45,8 @@
       margin-top: -10px
       position: relative
       
+      p strong
+        font-weight: 500
 
 
 
@@ -84,14 +87,15 @@
 
 // Controls
 .client-controls
-  +position(absolute, 0px 0px 0px 0px) 
+  +position(absolute, 50px 0px 0px 0px) 
   z-index: 2
   
   > div
     +size(40px)
     margin-top: -20px
     cursor: pointer
-    
+    transition-duration: 0.3s
+
     path
       fill: $orange-dark
 
@@ -123,8 +127,6 @@
     
     &.active-client
       border-color: $orange-dark
-    
-    
     
 
 @media (max-width: 750px)
@@ -164,7 +166,6 @@
     
     
     
-    
-    
+
     
     
