try to fix avatar

--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -17,8 +17,11 @@ section
 		+justify-content(space-around)
 
 		.face-img
+			background: 
+				position: center center
+				repeat: no-repeat
+				size: cover
 			+size(200px)
-			background: url(/assets/img/face.JPG)
 			order: 3
 			border-radius: 50%
 
