--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,9 @@
 	<h3 id="about-me">About Myself</h3>
 	<div class="face-lockup">
 
-		<div class="face-img" style="background-image: url(/assets/img/face.jpg)"></div>
+		<div class="face-img">
+      <img src="assets/img/face.jpg" alt="avatar">  
+    </div>
 
 		<div class="icon1">{% include icons/responsive.html %}</div>
 		<div class="icon2">{% include icons/javascript-coding.html %}</div>
