fix work images

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -24,36 +24,31 @@
 		width: 25%
 		float: left
 		position: relative
-		padding-top: 16%
-		overflow: hidden
 		cursor: pointer
-		background: 
-			position: center center
-			repeat: no-repeat
-			size: cover
-		+perspective(300)
+
+		
+		img
+			display: block
+			max-width: 100%
+
 
 		@media screen and (max-width: 760px)
 			width: 50%
-			padding-top: 26%
 
-		background: 
-			position: center center
-			repeat: no-repeat
-			size: cover
+			
 
 		.thumb-overlay
 			+position(absolute, -50% 0px null 0px)
 			height: 100%
 			background: fade-out($orange-dark, 0.1)
 			text-align: center
-			+transition(200ms)
+			+transition(250ms)
 			+display(flex)
 			+align-items(center)
 			+justify-content(space-around)
-			+transform(rotateX(90deg))
-			+transform-origin(center bottom)
-			opacity: 0
+			+transform(rotateX(-90deg))
+			+transform-origin(bottom center)
+			opacity: 1
 
 		strong
 			display: block
