--- a/_includes/work.html
+++ b/_includes/work.html
@@ -7,7 +7,8 @@
     <div class="thumb-wrap">
       <div class="thumb-container">
       {% for project in site.data.settings.projects %}
-      <div class="thumb-unit" data-folder="{{ project.folder }}" style="background-image: url(/assets/img/work/{{project.folder}}/thumb.jpg);"> 
+      <div class="thumb-unit" data-folder="{{ project.folder }}">
+        <img src="assets/img/work/{{project.folder}}/thumb.jpg" alt="{{ project.name }}" /> 
         <div class="thumb-overlay">
           <strong>{{ project.name }}</strong>
         </div>
