--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,10 +2,7 @@
 	<h3 id="about-me">About Myself</h3>
 	<div class="face-lockup">
 
-		<div class="face-img">
-      <img src="assets/img/face.jpg" alt="avatar">  
-    </div>
-
+		<div class="face-img"><img src="assets/img/face.jpg" alt="avatar"></div>
 		<div class="icon1">{% include icons/responsive.html %}</div>
 		<div class="icon2">{% include icons/javascript-coding.html %}</div>
 		<div class="icon3">{% include icons/html-coding.html %}</div>
@@ -31,12 +28,12 @@
             <span></span>
           {% endfor %}
         </div>
-      </div>    
+      </div>
 
     {% endfor %}
-    
+
   </div>
-  
+
   {% endif %}
 
 </section>
