--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -22,7 +22,7 @@ section
 				repeat: no-repeat
 				size: cover
 			+size(200px)
-			order: 3
+			+order(3)
 
 		.face-img img
 			border-radius: 50%
@@ -30,13 +30,13 @@ section
 		[class^="icon"]
 			+size(100px)
 			&.icon1
-				order: 1
+				+order(1)
 			&.icon2
-				order: 2
+				+order(2)
 			&.icon3
-				order: 4
+				+order(4)
 			&.icon4
-				order: 5
+				+order(5)
 
 
 	@media screen and (max-width: 650px)
