--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,7 +1,7 @@
 header
   .background
     +height(100vh)
-    background: url(../img/background.jpg) center center
+    background-image: url(../img/background.jpg) center center
     background-size: cover
 
   .overlay 
