--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -5,7 +5,7 @@ header
     background-size: cover
 
   .overlay 
-    background-color: rgba(53, 49, 45, 0.35)
+    //background-color: rgba(53, 49, 45, 0.35)
     background: url("../img/pattern.png")
     background-repeat: repeat
     +height(100%)
