--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -8,7 +8,7 @@ header
     background-color: rgba(53, 49, 45, 0.35)
     background: url("../img/pattern.png")
     background-repeat: repeat
-    +height(40%)
+    height: 50%
 
 
   .content
