--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,12 +1,12 @@
 header
   .background
-    +height(100vh)
+    height: 100vh
     background: url(../img/background.jpg) center center
     background-size: cover
 
   .overlay 
     background-color: rgba(53, 49, 45, 0.35)
-    background: url("../img/pattern.png")
+    background-image: url("../img/pattern.png")
     background-repeat: repeat
     height: 100%
 
