--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,6 +1,6 @@
 header
   .background
-    height: 400px
+    height: 100vh
     background: url(../img/background.jpg) center center
     background-size: cover
 
