--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -71,7 +71,7 @@ header
 // Ipad header height fix
 
 @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait)
-  header
+  .background
     height: 1024px
 
 
@@ -79,7 +79,7 @@ header
  * iPad with landscape orientation.
  */
 @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape)
-  header
+  .background
     height: 768px
   
 
@@ -88,5 +88,5 @@ header
  * You can also target devices with aspect ratio.
  */
 @media screen and (device-aspect-ratio: 40/71) 
-  header
+  .background
     height: 500px
