add move project

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <div class="overlay">
 	<div class="content">
 	  <p class="kicker1">Hello, my name is Aliaksandr Sushkevich and I am</p>
-	  <h1>Full Sctack Web Developer</h1>
+	  <h1>Front-End Web Developer</h1>
 	  <!--<p class="kicker2">creating modern and responsive Web Application</p>-->
 	  <nav>
 	    {% for item in site.data.settings.menu %}
