--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -11,7 +11,7 @@
 .thumb-wrap, .work-wrap
 	width: 50%
 	float: left
-	
+
 
 .thumb-container
 	max-width: 960px
@@ -27,7 +27,7 @@
 		cursor: pointer
 		overflow: hidden
 		+perspective(300)
-		
+
 		img
 			display: block
 			max-width: 100%
@@ -36,7 +36,7 @@
 		@media screen and (max-width: 760px)
 			width: 50%
 
-			
+
 
 		.thumb-overlay
 			+position(absolute, -50% 0px null 0px)
@@ -71,6 +71,7 @@
 .work-container
 	max-width: 600px
 	margin: 0px auto
+	margin-bottom: 50px
 	padding: 0 15px
 	+box-sizing(border-box)
 
@@ -85,7 +86,7 @@
 		line-height: 1.2
 		margin: 0 0 20px
 	img
-		max-width: 100% 
+		max-width: 100%
 		margin-bottom: 20px
 
 	.work-return
@@ -94,7 +95,7 @@
 		opacity: 0.5
 		+position(absolute, -3px null null -60px)
 
-		
+
 
 		path
 			fill: rgba(0,0,0,0.4)
@@ -110,7 +111,7 @@
 
 		h4
 			margin-left: 60px
-a 
+a
 	color: $orange-dark
 
 	&:hover
