--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -1,10 +1,12 @@
 header
+  height: 100%
+
   .background
-    height: 100vh
+    height: 100%
     background: url(../img/background.jpg) center center
     background-size: cover
 
-  .overlay 
+  .overlay
     background-color: rgba(53, 49, 45, 0.35)
     background-image: url("../img/pattern.png")
     background-repeat: repeat
@@ -15,26 +17,26 @@ header
     position: absolute
     width: 100%
     top: 40%
-    
+
     nav
       text-align: center
-      
+
       a
         display: inline-block
         margin-left: 20px
         margin-right: 20px
-        
+
         color: #FFFFFF
         @extend %small-bold
-        
+
         &:hover
           color: $orange-light
-      
+
 
     .kicker1
       Font:
         size: 17px
-        weight: 300 
+        weight: 300
       text-align: center
       letter-spacing: 0.05em
       color: white
@@ -51,18 +53,18 @@ header
       letter-spacing: 0.05em
       clear: both
 
-    
+
     .kicker2
       Font:
         size: 17px
-        weight: 500 
+        weight: 500
       text-align: center
       letter-spacing: 0.05em
       color: white
       line-height: 1
 
 @media (max-width: 420px)
-  
+
   header .content nav a
     margin-left: 0px
     margin-right: 15px
