add codepen link

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,9 +4,9 @@
 	<div class="social-links">
 		<a href="https://vk.com/alscream" class="icon">{% include icons/social-vk.html %}</a>
 		<a href="https://github.com/aliaksandr-s" class="icon">{% include icons/social-github.html %}</a>
-		<a href="" class="icon">{% include icons/social-linkedin.html %}</a>
+		<a href="http://codepen.io/alscream/" class="icon">{% include icons/codepen.html %}</a>
 	</div>
-	
+
 <!-- 	<hr class="bar"> -->
 
 	<a href="mailto:{{site.data.settings.email}}" class="biglink">{{site.data.settings.email}}</a>
