fix visited links

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -54,15 +54,13 @@ hr
 
 /* Links
   ------------------------------------	*/
-a
-  color: $linkColor
+a, a:visited, a:focus
+  color: $orange-dark
   text-decoration: none
   outline: 0
 
-a:hover, a:focus
-  color: lighten($linkColor, 20%)
-
-
+a:hover
+  color: $orange-light
 
 /* Selection colors (easy to forget)
   ------------------------------------	*/
