--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -12,6 +12,22 @@
 	width: 50%
 	float: left
 
+.work-categories
+	width: 50%
+	margin-bottom: 40px
+	text-align: center
+
+	.work-categorie
+		margin: 0 20px
+		font-size: 18px
+		line-height: 2.25
+		letter-spacing: 0.5px
+		&:hover
+			cursor: pointer
+			color: $orange-dark
+			
+	.active-categorie
+		color: $orange-dark
 
 .thumb-container
 	max-width: 960px
