--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -21,11 +21,12 @@ section
 				position: center center
 				repeat: no-repeat
 				size: cover
-			+size(200px)
+			+size(280px)
 			+order(3)
 
 		.face-img img
 			border-radius: 50%
+			width: 100%
 
 		[class^="icon"]
 			+size(100px)
