--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -1,4 +1,4 @@
-section
+.section-about
 
 	.color-text
 		color: $orange
@@ -112,5 +112,5 @@ section
 			width: 220px
 
 @media (max-width: 510px)
-	section .face-lockup [class^="icon"]
+	.section-about .face-lockup [class^="icon"]
 		display: none
