--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -1,6 +1,8 @@
 .section-contact
 	text-align: center
 	padding-bottom: 90px
+	background: $bgcolor
+	overflow-x: hidden
 
 .social-links
 	max-width: 700px
